@@ -30,6 +30,8 @@ version 2.7.0 (??/??/????):
 	  Ctrl+v can be bound to 'Paste as Plain Text' by default.
 	* Plugins can now handle markup in buddy names by attaching to the signal
 	  "drawing-buddy". (Daniele Ricci, Andrea Piccinelli)
+	* Be more accommodating when scaling down large images for use as
+	  buddy icons.
 
 	Bonjour:
 	* Added support for IPv6. (Thanks to T_X for testing)
